# antares-forms

./: .gitignore  AUDITORIA.md  LICENSE  README.md  WINDOWS.md  main.py  pyproject.toml  requirements.txt
src/: config.py  form_filler.py  persona_engine.py  response_engine.py
tests/: test_logica.py
