[project]
name = "antares-forms"
version = "1.0.0"
description = "Simulador de respuestas humanas para Google Forms — proyecto académico"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lord Antares", email = "antares.ciancio@gmail.com" }
]
dependencies = [
    "playwright>=1.61.0",
    "rich>=15.0.0",
    "faker>=40.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
